# interval-functor

./: .ghci.repl  CHANGELOG.md  LICENSE  README.md  cabal.project  cabal.project.ci  hie.yaml  interval-functor.cabal
.github/workflows/: ci.yml
interval-functor-orphans/: CHANGELOG.md  LICENSE  interval-functor-orphans.cabal
interval-functor-orphans/src/Test/QuickCheck/Instances/Functor/: Interval.hs
interval-functor-orphans/src/Test/SmallCheck/Series/Functor/: Interval.hs
script/: ghci-flags-dependencies
src/Data/Functor/: Interval.hs
test/: Test.hs
test/Data/Functor/Interval/: Test.hs
