cabal-version: 2.4
name: interval-functor-orphans
version: 0.1.0.0
license: BSD-3-Clause
license-file: LICENSE
author: Ignat Insarov
maintainer: kindaro@gmail.com
copyright: 2020 Ignat Insarov
extra-source-files: CHANGELOG.md
library
  exposed-modules: Test.QuickCheck.Instances.Functor.Interval, Test.SmallCheck.Series.Functor.Interval
  build-depends:
    , base >= 4.10 && < 5
    , interval-functor ^>= 0.0
    , QuickCheck ^>= 2.14
    , smallcheck ^>= 1.2
  hs-source-dirs: src
